# pesto

./: .gitignore  README.md  examples_cpython_targets.json  pyproject.toml  result.json  test.c
cpython-patch/: instrumentation.patch
fuzz/: .gitignore  Grammar.g4  GrammarGenerator.py  README.md  fuzz.py
samples/: test.c
scripts/: average_py_size.py  build-patched-cpython.sh  dedup.py  install-perses.sh  measure.sh  run-reducers.py  summarize_errors.py  test-script.sh
src/pesto/: cli.py  cpython_build.py  dedup.py  evaluator.py  fuzzer.py  mutator.py  paths.py  pipeline.py  reducer.py  summarize.py  tracer.py
src/pesto/cpython_headers/: pyport.h  stdatomic.h
src/pesto/data/: test-script.sh
src/pesto/eval/: measure.py  plot_measure.py
src/pesto/grammar/: AbstractGrammar.g4  AbstractGrammarGenerator.py  Grammar.g4  fuzz_abstract.py
src/pesto/scripts/: build_functions_list.py  capture_python_logs.py
tests/: .gitignore  add_0.py  add_1.py  attr_error.py  callint.py  intlen.py  key_error.py
tests/fuzzing_samples/: case_0.py  case_1.py  case_10.py  case_11.py  case_12.py  case_13.py  case_14.py  case_15.py  case_16.py  case_17.py  case_18.py  case_19.py  case_2.py  case_3.py  case_4.py  case_5.py  case_6.py  case_7.py  case_8.py  case_9.py
tests/fuzzing_samples/results/: case_0.err  case_1.err  case_10.err  case_11.err  case_12.err  case_13.err  case_14.err  case_15.err  case_16.err  case_17.err  case_18.err  case_19.err  case_2.err  case_3.err  case_4.err  case_5.err  case_6.err  case_7.err  case_8.err  case_9.err
