[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pesto"
version = "0.1.0"
description = "Parametric Execution-path-Sensitivity for Test Optimization"
requires-python = ">=3.11"
dependencies = ["pycparser>=2.21"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/pesto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
